--- a/launch/index.twig
+++ b/launch/index.twig
@@ -78,7 +78,7 @@
 								<form class="form-inline" id="fh5co-header-subscribe" method="post" action="{{ meta.subscribe }}">
 									<div class="col-md-12 col-md-offset-0">
 										<div class="form-group">
-											<input type="email" class="form-control" name="email" id="email" placeholder="Get notify by email">
+											<input type="email" class="form-control" name="email" id="email" placeholder="Get notified by email">
 											<button type="submit" class="btn btn-primary">Send</button>
 										</div>
 									</div>
